# nlgraph

./: .gitignore  LICENSE  README.md  __init__.py  envsetup.sh  pyproject.toml  requirements.txt  setup.py
nlgraph/: common.py  data.py  graph.py  ptgeo.py  utils.py
nlgraph/parse/: __init__.py
nlgraph/tcl_templates/: calc_scoap.tcl.template  logic_depth.tcl.template  logic_synth.tcl.template
src/nlgraph/: README.md  __init__.py  common.py  graph.py  keyinsert.py  utils.py
src/nlgraph/libraries/: gsclib180_svt_3p0.v  gsclib45_svt_3p0.v  leda_fpga.v  saed90_typ_1p11.db  saed90_typ_1p11.v
src/nlgraph/parse/: nets.py  synopsis.py
tests/: test_base.py
tests/resources/netlists/: cpu.v  darkriscv.v  darksocv.v  eth_top.v  mips_16_core_top.v  netlist_b01.v  netlist_b03.v  netlist_b06.v  netlist_b08.v  netlist_b09.v  netlist_b12.v  netlist_b14.v  netlist_b15.v  netlist_b22.v  netlist_divider.v  netlist_i2c_master_top.v  netlist_top.v  netlist_wb_conmax_top.v  oc8051_top.v  ps2_top.v  riscv_core.v  wb_conmax_top_netlist_BAD.v  yacc.v
